[gd_scene load_steps=2 format=3 uid="uid://dxfmf433s5ab3"]

[ext_resource type="Script" path="res://screens/settings/settings.gd" id="1_cg0bx"]

[node name="Settings" type="Control" node_paths=PackedStringArray("control_scheme_button", "ui_scale_range", "display_mode_button", "tutorial_enabled_button", "bindings_list", "anthropic_api_key_edit")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cg0bx")
control_scheme_button = NodePath("PanelContainer/CenterContainer/VBoxContainer/GridContainer/ControlSchemeButton")
ui_scale_range = NodePath("PanelContainer/CenterContainer/VBoxContainer/GridContainer/UIScaleSpinBox")
display_mode_button = NodePath("PanelContainer/CenterContainer/VBoxContainer/GridContainer/DisplayModeButton")
tutorial_enabled_button = NodePath("PanelContainer/CenterContainer/VBoxContainer/GridContainer/TutorialEnabledButton")
bindings_list = NodePath("PanelContainer/CenterContainer/VBoxContainer/ScrollContainer/BindingsList")
anthropic_api_key_edit = NodePath("PanelContainer/CenterContainer/VBoxContainer/GridContainer/AnthropicApiKeyEdit")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="ControlSchemeLabel" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Maneuvering"
horizontal_alignment = 2
uppercase = true

[node name="ControlSchemeButton" type="OptionButton" parent="PanelContainer/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Choose how your ship maneuvers:
- Ship-oriented: Thrust applies in the direction your ship is facing, and left/right rotate the ship.
- Screen-oriented: Controls are based on screen direction. Your ship will turn to face the direction you indicate before applying thrust.
- Mouse joystick: Use your mouse or touchpad like a joystick to control the ship's direction and thrust.
- Click to move: Click on a destination to automatically navigate there."
selected = 0
item_count = 4
popup/item_0/text = "SHIP-ORIENTED"
popup/item_1/text = "SCREEN-ORIENTED"
popup/item_1/id = 1
popup/item_2/text = "MOUSE JOYSTICK"
popup/item_2/id = 2
popup/item_3/text = "CLICK TO MOVE"
popup/item_3/id = 3

[node name="UIScaleLabel" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "UI scale"
horizontal_alignment = 2
uppercase = true

[node name="UIScaleSpinBox" type="SpinBox" parent="PanelContainer/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
min_value = 50.0
max_value = 200.0
step = 25.0
value = 100.0
update_on_text_changed = true
suffix = "%"

[node name="DisplayModeLabel" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Display mode"
horizontal_alignment = 2
uppercase = true

[node name="DisplayModeButton" type="OptionButton" parent="PanelContainer/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "WINDOWED"
popup/item_1/text = "FULLSCREEN"
popup/item_1/id = 1

[node name="TutorialEnabledLabel" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "In-game tutorial"
horizontal_alignment = 2
uppercase = true

[node name="TutorialEnabledButton" type="OptionButton" parent="PanelContainer/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "ENABLED"
popup/item_1/text = "DISABLED"
popup/item_1/id = 1

[node name="AnthropicApiKeyLabel" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Anthropic API key"
horizontal_alignment = 2
uppercase = true

[node name="AnthropicApiKeyEdit" type="TextEdit" parent="PanelContainer/CenterContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Paste API key here"

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Key bindings:"
uppercase = true

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="BindingsList" type="ItemList" parent="PanelContainer/CenterContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true
max_columns = 2
same_column_width = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RevertButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Revert"

[node name="SaveButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[connection signal="item_selected" from="PanelContainer/CenterContainer/VBoxContainer/GridContainer/ControlSchemeButton" to="." method="_on_control_scheme_item_selected"]
[connection signal="value_changed" from="PanelContainer/CenterContainer/VBoxContainer/GridContainer/UIScaleSpinBox" to="." method="_on_ui_scale_changed"]
[connection signal="item_selected" from="PanelContainer/CenterContainer/VBoxContainer/GridContainer/DisplayModeButton" to="." method="_on_display_mode_button_item_selected"]
[connection signal="item_selected" from="PanelContainer/CenterContainer/VBoxContainer/GridContainer/TutorialEnabledButton" to="." method="_on_tutorial_enabled_item_selected"]
[connection signal="text_changed" from="PanelContainer/CenterContainer/VBoxContainer/GridContainer/AnthropicApiKeyEdit" to="." method="_on_anthropic_api_key_changed"]
[connection signal="item_clicked" from="PanelContainer/CenterContainer/VBoxContainer/ScrollContainer/BindingsList" to="." method="_on_bindings_list_item_clicked"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/RevertButton" to="." method="_on_revert_button_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
